--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,58 @@
-/* 
-    General Styles
-*/
+body {
+    font-family: 'Rozha One', serif;
+}
+
+.navbar {
+    background-color: teal;
+    display: flex;
+    justify-content: center;
+    color: aliceblue;
+}
+
+footer {
+    background-color: teal;
+    color: aliceblue;
+}
+
+.form {
+    padding: 0;
+}
+
+.container,
+.container-fluid {
+    width: 30%;
+    margin-top: 50px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+input {
+    border-radius: 10px;
+    padding: 5px;
+    margin-bottom: 5px;
+    width: 100%;
+    border: teal 0.5px solid;
+    text-align: center;
+}
+
+.btn {
+    background-color: teal !important;
+    border-radius: 10px;
+}
+
+h3 {
+    text-align: center;
+    color: teal
+}
+
+p {
+    border: 1px solid teal;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+    width: 100%;
+    text-align: center;
+}
+#home{
+    margin-top: 50px;
+}
