--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -46,9 +46,13 @@ footer {
 
 }
 #avatar{
-    width: 75px;
-    height: 75px;
+    width: 85px;
+    height: 85px;
     border-radius: 50px;
+    float: left !important;
+    margin-right:10px ;
+    margin: 15px;
+ 
 }
 
 #btnHome {
