--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -119,7 +119,7 @@ i {
 .fa-xmark{
     font-size: 25px;
 }
-.alert-green {
-    background-color: #4CAF50 !important;
-    color: white;
-  }
+.spinner-border{
+    color: teal;
+    margin: 50px;
+}
